--- a/GSoC.tex
+++ b/GSoC.tex
@@ -24,15 +24,16 @@ and its derivatives, and an $n$th order ODE can be written as
 
 \[F(x, y, y', \cdots, y^{(n)}) = 0\].
 
-Physics and engineering often present ODE problems. Many physics phenomena in physics can be reduced into an ODE. Newton's second law of motion, namely $F=ma$ can be rewritten into an ODE as $m\frac{d^2x}{dt^2}
-=F(x)$, since $a$ can depend on time. ODEs can be very difficult to solve. There are many case in which an ODE does not have an analytical solution. Therefore, numerical methods need to be used to solve
-ODEs, by approximating the solution. There are two kinds of problems in ODE. One is initial
+Physics and engineering often present ODE problems. Many physical phenomena can be reduced into an ODE. Newton's second law of motion, namely $F=ma$ can be rewritten into an ODE as $m\frac{d^2x}{dt^2}
+=F(x)$, since $a$ can depend on time. ODEs can be very difficult to solve. There are many cases in which an ODE does not have an analytical solution. Therefore, numerical methods need to be used to solve
+ODEs by approximating the solution. There are two kinds of ODE problems. One is initial
 value problem (IVP) and the other is boundary value problem (BVP). For instance, the ODE
 \[m\frac{d^2x}{dt^2} = -kx(t)\]
 describes the motion for a harmonic oscillator. If the initial position $x_0$ and initial velocity
-$\frac{dx_0}{dt}$ is known, then it is an IVP problem. If the condition at the ``boundary'' is know,
-for instance, initial position $x_0$ and final position $x_1$, then it is a BVP problem. The solvers
-that I am going to work on with solvers for BVP problem.
+$\frac{dx_0}{dt}$ are known, then it is an IVP problem. If the condition at the ``boundary'' is known,
+for instance, initial position $x_0$ and final position $x_1$, then it is a BVP problem. My
+proposal is for the development of efficient and general-purpose BVP solvers for the Julia
+ecosystem.
 % subsection basic_concepts_for_nonexperts (end)
 
 \subsubsection{Introduction} % (fold)
@@ -61,24 +62,33 @@ abstract AbstractBVProblem{dType,bType,isinplace,F} <: DEProblem
 type BVProblem{dType,bType,initType,F} <: AbstractBVProblem{dType,bType,F}
   f::F
   domin::dType
-  bc::bType
+  bc::bType		#boundary condition
   init::initType
 end
 
 function BVProblem(f,domin,bc,init=nothing)
   BVProblem{eltype(domin),eltype(bc),eltype(init),typeof(f)}(f,domin,bc,init)
 end
-
 \end{lstlisting}
 
+Also, I need to add a data structure for boundary conditions, which let users to define a
+boundary condition easily. The following is a template.
+
+\begin{lstlisting}[mathescape=true]
+abstract AbstractBoundaryCondition
+
+type DirichletBC <: AbstractBoundaryCondition; end
+type NeumannBC <: AbstractBoundaryCondition; end
+type RobinBC <: AbstractBoundaryCondition; end
+\end{lstlisting}
 
 \subsubsection{Goal 2: Implement shooting method}
-The shooting method is a method that convert a BVP problem into an IVP problem and a root finding
-problem. Generally, the shooting method is efficient in simple problems, because it does not need
-a discretization matrix. This is no memory overhead. The drawback is that even if the BVP problem
+The shooting method is a method that converts a BVP problem into an IVP problem and a root finding
+problem. Generally, the shooting method is efficient in simple problems because it does not need
+a discretization matrix. This reduces the memory overhead. The drawback is that even if the BVP problem
 is well-conditioned, the root finding problem that the BVP converted to can be ill-conditioned.
-Therefore, a more robust method like the collocation method is also need, despite shooting method
-is easy to implement.
+Therefore, a more robust method like the collocation method is also needed, despite the fact that
+the shooting shooting method is easy to implement.
 
 This is the my current implementation of the shooting method. I will work on to generalize it later,
 e.g. let user has the ability to input a ODE solver and a minimization algorithm.
@@ -118,13 +128,13 @@ discretization this summer. The ``discretization'' is really a matrix $A$ that a
 quadrature rules e.g. Simpson's rule to a vector $\vec{x}$. It forms a sparse linear system
 $A\vec{x}=\vec{b}$ where $\vec{b}$ is known by the boundary condition and RHS of the ODE.
 
-A quadrature rules is a numeric method to calculate a well-behaved define integral (no singularity).
-It uses the idea that a function $f(x)$ can be represented by multiplying orthogonal polynomial $P(x)$
+A quadrature rule is a numeric method to calculate a well-behaved define integral (no singularity).
+It uses the idea that a function $f(x)$ can be represented by multiplying an orthogonal polynomial $P(x)$
 and another function $W(x)$.
 
 \[f(x) = P(x)\cdot W(x)\]
 
-Therefore, a define integral of function $F$ can be approximated by a linear combination of orthogonal
+Therefore, a define integral of a function $F$ can be approximated by a linear combination of orthogonal
 polynomials $p_i$ and their weights $w_i$.
 
 \[F = \int_{a}^{b}f(x)\;dx = \int_{a}^{b}P(x)W(x) \approx \sum_{i=1}^{n}p_i(x)\cdot w_i(x)\;dx\]
@@ -168,11 +178,22 @@ $P_n$ is the $n$th order Legendre polynomial, and it can be written as
 \[P_{n}(x)=2^{n} \cdot \sum _{k=0}^{n}x^{k}\binom{n}{k}\binom{{\frac {n+k-1}{2}}}{n}.\]
 
 \subsection{Stretch Goals and Future Directions}
-The stretch goals for this summer would be add tests for collection method and shooting method, to
-make general recommendation for helping users to choose solvers. Also, I want to implement the weighted
-residual method. Unlike the collocation method forces the residual to be zero at a finite number
-of collection points the weighted residual method minimize the residual over the entire interval of
-integration.
+\subsubsection{Compatibility with the features of the common interface}
+There are many features in \textit{JuliaDiffEq} common interface. They are listed in
+\url{http://docs.juliadiffeq.org/latest/basics/common_solver_opts.html}, and I plan to
+implement the following.
+\begin{itemize}
+	\item Continuous output
+	\item Singularity handling
+	\item \textit{Progressbars} for linear ODEs
+	\item Adaptivity
+\end{itemize}
+
+
+\subsubsection{Weighted residual method}
+Unlike the collocation method forces the residual to be zero at a finite number of
+collection points, the weighted residual method minimize the residual over the entire
+interval of integration.
 
 \subsection{Timeline}
 \paragraph{Pre-GSoC} % (fold)
@@ -188,7 +209,7 @@ I don't have much time to work on the GSoC project until it starts.
 	\item Get proficient in Git version control system.
 	\item Learn more about the collocation method and optimization methods that will be
 	used in the shooting method.
-	\item Send a PR.
+	\item Send a pull request.
 \end{itemize}
 % paragraph community_bonding (end)
 
@@ -200,7 +221,7 @@ I don't have much time to work on the GSoC project until it starts.
 	\item Generalize shooting method.
 	\item Test shooting method with some simple problems with analytical solutions.
 	\item Learn more deeply about collocation methods.
-	\item Send a PR.
+	\item Send a pull request.
 \end{itemize}
 % paragraph shooting_method_may_30_june_15 (end)
 
@@ -212,7 +233,7 @@ I don't have much time to work on the GSoC project until it starts.
 	\item Implement different kinds of discretization algorithms for collection methods.
 	\item Optimize those discretization algorithms that are implemented with \textit{SIMD}
 	and some other techniques.
-	\item Send a PR.
+	\item Send a pull request.
 \end{itemize}
 % paragraph discretization_algorithms (end)
 
@@ -222,7 +243,7 @@ I don't have much time to work on the GSoC project until it starts.
 	\item Implement the collocation method.
 	\item Add more sophisticated testing BVP problems to test against the collocation method.
 	\item Optimize the collocation method.
-	\item Send a PR.
+	\item Send a pull request.
 \end{itemize}
 % paragraph least_squares_method_july_10_july_31 (end)
 
@@ -231,7 +252,7 @@ I don't have much time to work on the GSoC project until it starts.
 \begin{itemize}
 	\item Write a documentation page for the BVP solvers that I have written.
 	\item Add more tests for BVP problem and tune the algorithm.
-	\item Send a PR.
+	\item Send a pull request.
 \end{itemize}
 % paragraph weighted_residual_method_july_31_august_15 (end)
 
@@ -240,7 +261,7 @@ I don't have much time to work on the GSoC project until it starts.
 \begin{itemize}
 	% \item Write a documentation page for the BVP solvers that I have written.
 	\item Start to work on the stretch goals.
-	\item Send a PR.
+	\item Send a pull request.
 	\item Review and test all the code that I have written in GSoC project.
 \end{itemize}
 % paragraph review_&_stretch_goals_august_15_august_29 (end)
@@ -280,8 +301,8 @@ Here are my code that is written in Julia.
 My name is Yingbo Ma, and I am currently a senior in Lexington Public High School. I got admitted by
 University of California, Irvine (UCI). I am interested in mathematics and physics and willing to
 learn new things about them. I worked with Joseph Obiajulu on \textit{ODE.jl} last summer in MIT
-Julia Lab. I still go to Julia Lab regularly now. I am working on fixing the \textit{logm} function
-in Julia base.
+Julia Lab. I still go to Julia Lab regularly now, and now I am working on fixing the \textit{logm}
+function in Julia base.
 % subsection about_me (end)
 
 \subsection{Contact Information} % (fold)
