Clean up & add a proposal template for 2018

--- a/2017/main.tex
+++ b/2017/main.tex
@@ -2,6 +2,7 @@
 \documentclass[a4paper,11pt,onecolumn]{article}
 \input{packages.tex}
 \author{Yingbo Ma}
+\date{April 3, 2017}
 \title{Native Julia Solvers for Ordinary Differential Equations Boundary Value Problem: A GSoC proposal}
 
 \begin{document}
